# oop_sample

./: CMakeLists.txt
include/: Executable.h  Task.h  UsableResource.h
src/: ConsumableResource.cpp  Executable.cpp  Process.cpp  Resource.cpp  Task.cpp  Usableresource.cpp
